UCF-APR2.4/ftr main/force-app/main/default/objects/OpportunityLineItem/fields/Allocated_Total_Capex__c.field-meta.xml
<CustomField>
    <fullName>Allocated_Total_Capex__c</fullName>
    <formula>IF( QuoteItem__c  &lt;&gt; null,  QuoteItem__r.Allocated_Total_Capex__c , 0.00)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Allocated Total Capex</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>