UCF-APR2.4/ftr main/force-app/main/default/objects/OpportunityLineItem/fields/Attribute_Info__c.field-meta.xml
<CustomField>
    <fullName>Attribute_Info__c</fullName>
    <label>Attribute Info</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>