UCF-APR2.4/ftr main/force-app/main/default/objects/OpportunityLineItem/fields/BDT_Required__c.field-meta.xml
<CustomField>
    <fullName>BDT_Required__c</fullName>
    <formula>IF( QuoteItem__c  &lt;&gt; null,  QuoteItem__r.BDT_Required__c , &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BDT Required</label>
    <type>Text</type>
</CustomField>