UCF-APR2.4/ftr main/force-app/main/default/objects/OpportunityLineItem/fields/Contract_MRR__c.field-meta.xml
<CustomField>
    <fullName>Contract_MRR__c</fullName>
    <formula>IF(ContractMRR2__c &gt; 0,(( ContractMRR2__c) * If(Term_Months__c&lt;1,1,Term_Months__c)* Quantity),(( UnitPrice) * If(Term_Months__c&lt;1,1,Term_Months__c)* Quantity))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract MRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>