UCF-APR2.4/ftr main/force-app/main/default/objects/OpportunityLineItem/fields/Contract_MRR_New__c.field-meta.xml
<CustomField>
    <fullName>Contract_MRR_New__c</fullName>
    <formula>IF( OpportunityRecordType__c == &apos;Equote&apos;,( CPQ_NetNewMRR__c  *   Opportunity_Contract_Term_Year__c  * 12),IF(ContractMRR2__c &gt; 0,(( ContractMRR2__c) * If(Term_Months__c&lt;1,1,Term_Months__c)* Quantity),(( UnitPrice + Renewal_MRR__c) * If(Term_Months__c&lt;1,1,Term_Months__c)* Quantity)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract MRR New</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>