UCF-APR2.4/ftr main/force-app/main/default/objects/OpportunityLineItem/fields/CRT__c.field-meta.xml
<CustomField>
    <fullName>CRT__c</fullName>
    <formula>IF( QuoteItem__c  &lt;&gt; null,  QuoteItem__r.CRT__c , &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CRT</label>
    <type>Text</type>
</CustomField>