UCF-APR2.4/ftr main/force-app/main/default/objects/OpportunityLineItem/fields/Delta_MRR__c.field-meta.xml
<CustomField>
    <fullName>Delta_MRR__c</fullName>
    <formula>(Renewal_MRR__c * Quantity) - Previous_MRR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WriteDown MRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>