UCF-APR2.4/ftr main/force-app/main/default/objects/OpportunityLineItem/fields/Dsat_Standard_Interval__c.field-meta.xml
<CustomField>
    <fullName>Dsat_Standard_Interval__c</fullName>
    <label>Number of Business Days</label>
    <length>25</length>
    <type>Text</type>
</CustomField>