UCF-APR2.4/ftr main/force-app/main/default/objects/OpportunityLineItem/fields/Final_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Final_Quantity__c</fullName>
    <formula>IF(OR(ISNULL(vlocity_cmt__EffectiveQuantity__c),vlocity_cmt__EffectiveQuantity__c==0),Quantity,vlocity_cmt__EffectiveQuantity__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>