UCF-APR2.4/ftr main/force-app/main/default/objects/OpportunityLineItem/fields/ftr_DiscountPrice__c.field-meta.xml
<CustomField>
    <fullName>ftr_DiscountPrice__c</fullName>
    <label>Discount Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>