UCF-APR2.4/ftr main/force-app/main/default/objects/OpportunityLineItem/fields/ftr_isAddonProduct__c.field-meta.xml
<CustomField>
    <fullName>ftr_isAddonProduct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ftr_isAddonProduct</label>
    <type>Checkbox</type>
</CustomField>