UCF-APR2.4/ftr main/force-app/main/default/objects/OpportunityLineItem/fields/ftr_isApplyDiscount__c.field-meta.xml
<CustomField>
    <fullName>ftr_isApplyDiscount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Apply Discount</label>
    <type>Checkbox</type>
</CustomField>