UCF-APR2.4/ftr main/force-app/main/default/objects/OpportunityLineItem/fields/New_TCV__c.field-meta.xml
<CustomField>
    <fullName>New_TCV__c</fullName>
    <description>New TCV</description>
    <formula>Term_Months__c  *  CPQ_NetNewMRR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Terms (month) x Net New MRR</inlineHelpText>
    <label>New TCV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>