UCF-APR2.4/ftr main/force-app/main/default/objects/OpportunityLineItem/fields/Partnered__c.field-meta.xml
<CustomField>
    <fullName>Partnered__c</fullName>
    <label>Partnered</label>
    <length>25</length>
    <type>Text</type>
</CustomField>