UCF-APR2.4/ftr main/force-app/main/default/objects/OpportunityLineItem/fields/Previous_MRR__c.field-meta.xml
<CustomField>
    <fullName>Previous_MRR__c</fullName>
    <label>Previous MRR</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>