UCF-APR2.4/ftr main/force-app/main/default/objects/OpportunityLineItem/fields/QuoteLineItem__c.field-meta.xml
<CustomField>
    <fullName>QuoteLineItem__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field is used for the hybird opportunity initiative. Relating the opportunity product to its synced quote line item.</description>
    <label>Quote Line Item</label>
    <referenceTo>QuoteLineItem</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>