UCF-APR2.4/ftr main/force-app/main/default/objects/OpportunityLineItem/fields/Service_Area__c.field-meta.xml
<CustomField>
    <fullName>Service_Area__c</fullName>
    <formula>IF( QuoteItem__c  &lt;&gt; null,  QuoteItem__r.Service_Area__c , &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Area</label>
    <type>Text</type>
</CustomField>