UCF-APR2.4/ftr main/force-app/main/default/objects/OpportunityLineItem/fields/SmartVoice_FiOS_100_100_Broadband__c.field-meta.xml
<CustomField>
    <fullName>SmartVoice_FiOS_100_100_Broadband__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SmartVoice+FiberOptic 100/100 Broadband</label>
    <type>Checkbox</type>
</CustomField>