UCF-APR2.4/ftr main/force-app/main/default/objects/OpportunityLineItem/fields/SmartVoice_FiOS_1G_1G_Broadband__c.field-meta.xml
<CustomField>
    <fullName>SmartVoice_FiOS_1G_1G_Broadband__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SmartVoice+FiberOptic 1G /1G Broadband</label>
    <type>Checkbox</type>
</CustomField>