UCF-APR2.4/ftr main/force-app/main/default/objects/OpportunityLineItem/fields/SNE_Code_MRC__c.field-meta.xml
<CustomField>
    <fullName>SNE_Code_MRC__c</fullName>
    <label>SNE Code MRC</label>
    <length>100</length>
    <type>Text</type>
</CustomField>