UCF-APR2.4/ftr main/force-app/main/default/objects/OpportunityLineItem/fields/Speed__c.field-meta.xml
<CustomField>
    <fullName>Speed__c</fullName>
    <description>This field is used for the hybrid opportunity initiative. Holds the configured speed value of the product.</description>
    <label>Speed</label>
    <length>20</length>
    <type>Text</type>
</CustomField>