UCF-APR2.4/ftr main/force-app/main/default/objects/OpportunityLineItem/fields/Total_MRC__c.field-meta.xml
<CustomField>
    <fullName>Total_MRC__c</fullName>
    <formula>IF(ISPICKVAL(Opportunity_Sync__c, &apos;Vlocity&apos;),UnitPrice * Final_Quantity__c,(UnitPrice + Renewal_MRR__c) *Final_Quantity__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total MRC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>