UCF-APR2.4/ftr main/force-app/main/default/objects/OpportunityLineItem/fields/Total_NRC__c.field-meta.xml
<CustomField>
    <fullName>Total_NRC__c</fullName>
    <formula>if ( CPQ_NetNewMRR__c &gt; 0 || ISPICKVAL(  Opportunity_Sync__c  , &apos;Vlocity&apos;)  , NRC_Price__c * 1, NRC_Price__c * Quantity)</formula>
    <label>Total NRC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>