UCF-APR2.4/ftr main/force-app/main/default/objects/OpportunityLineItem/fields/Total_NRC_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_NRC_Amount__c</fullName>
    <formula>Final_Quantity__c * NRC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total NRC Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>