UCF-APR2.4/ftr main/force-app/main/default/objects/OpportunityLineItem/fields/VlocityQuoteId__c.field-meta.xml
<CustomField>
    <fullName>VlocityQuoteId__c</fullName>
    <formula>QuoteLineItem__r.QuoteId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vlocity Quote Id</label>
    <type>Text</type>
</CustomField>