UCF-APR2.4/ftr main/force-app/main/default/objects/OpportunityLineItem/fields/Writedown_Upsell__c.field-meta.xml
<CustomField>
    <fullName>Writedown_Upsell__c</fullName>
    <formula>IF(Previous_MRR__c =0,1,(Delta_MRR__c +  CPQ_NetNewMRR__c)/ Previous_MRR__c )</formula>
    <label>Writedown/Upsell %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>