UCF-APR2.4/ftr main/force-app/main/default/objects/OpportunityLineItem/validationRules/Wrong_Products_for_SFA_Opportunity.validationRule-meta.xml
<ValidationRule>
    <fullName>Wrong_Products_for_SFA_Opportunity</fullName>
    <active>false</active>
    <errorConditionFormula>AND(Product2.ProductCode != null, 
QuoteId__c = null,   Opportunity.Pricebook2.IsStandard = True)</errorConditionFormula>
    <errorMessage>Product selected is not Available for standard SFA quote</errorMessage>
</ValidationRule>